<resources>
    <string name="app_name">QuizAppAziz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="questions_amount">Questions amount:</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">Start</string>
    <string name="quiz">Quiz</string>
    <string name="clear_history">Clear History</string>
    <string name="change_language">Change Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="skip">Skip</string>
    <string name="correct_answers">Correct answers</string>
    <string name="result">Result</string>
    <string name="finish">Finish</string>
</resources>