<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.settings.SettingsFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear_history"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/clear_history"
        app:cornerRadius="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_language"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="15dp"
        android:text="@string/change_language"
        app:cornerRadius="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_theme"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/change_theme"
        app:cornerRadius="5dp" />

</LinearLayout>