<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="65dp"
    tools:context=".presentation.start.StartFragment">

    <ImageView
        android:id="@+id/iv_start_logo"
        android:layout_width="48dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_quizapp_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_questions_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/questions_amount"
        android:textColor="@color/text_color_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_start_logo" />

    <TextView
        android:id="@+id/tv_questions_amount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="1"
        android:textColor="@color/text_color_blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_questions_amount"
        app:layout_constraintStart_toEndOf="@id/tv_questions_amount"
        app:layout_constraintTop_toTopOf="@id/tv_questions_amount"
        tools:ignore="HardcodedText" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:max="50"
        android:min="1"
        android:progressTint="@color/seek_bar_color"
        android:thumbTint="@color/seek_bar_color"
        app:layout_constraintTop_toBottomOf="@id/tv_questions_amount"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/category"
        android:textColor="@color/text_color_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_for_spinner_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_category">

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/difficulty"
        android:textColor="@color/text_color_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_for_spinner_category" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_for_spinner_difficulty"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_difficulty">

        <Spinner
            android:id="@+id/spinner_difficulty"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="65dp"
        android:text="@string/start"
        app:cornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@id/card_for_spinner_difficulty" />

</androidx.constraintlayout.widget.ConstraintLayout>