<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.result.ResultFragment">

    <ImageView
        android:id="@+id/iv_done"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toTopOf="@id/card_view_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Category: Mixed" />

            <TextView
                android:id="@+id/tv_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/difficulty"
                android:textColor="@color/text_color_gray"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/tv_correct_answers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_category_name" />

            <TextView
                android:id="@+id/tv_difficulty_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="62dp"
                android:textColor="@color/black_50"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_difficulty"
                app:layout_constraintStart_toStartOf="@id/tv_difficulty"
                app:layout_constraintTop_toBottomOf="@id/tv_difficulty"
                tools:text="All" />

            <TextView
                android:id="@+id/tv_correct_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answers"
                android:textColor="@color/text_color_gray"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/tv_result"
                app:layout_constraintStart_toEndOf="@id/tv_difficulty"
                app:layout_constraintTop_toTopOf="@id/tv_difficulty" />

            <TextView
                android:id="@+id/tv_correct_answers_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_50"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_correct_answers"
                app:layout_constraintStart_toStartOf="@id/tv_correct_answers"
                app:layout_constraintTop_toBottomOf="@id/tv_correct_answers"
                tools:text="8/10" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textColor="@color/text_color_gray"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_correct_answers"
                app:layout_constraintTop_toTopOf="@id/tv_correct_answers" />

            <TextView
                android:id="@+id/tv_result_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_50"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_result"
                app:layout_constraintStart_toStartOf="@id/tv_result"
                app:layout_constraintTop_toBottomOf="@id/tv_result"
                tools:text="80%" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_color_done"
        android:text="@string/finish"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_result" />

</androidx.constraintlayout.widget.ConstraintLayout>